--- a/grip/index.html
+++ b/grip/index.html
@@ -26,8 +26,7 @@
         <h3>Enter a Username & Address to Continue</h3>
         <input type="text" placeholder="username" id="username"><br>
         <input type="text" placeholder="Address" id="address"><br><br>
-        <button id="continue" class="button">Continue</button><br>
-        No Personal Info :)
+        <button id="continue" class="button">Continue</button>
         <h3 id="errorSignIn"></h3>
     </div>
 <div class="box" id="for_res">
@@ -267,8 +266,11 @@
                         VANCOUVER,WA 98683
                         </a>
                         <h3><i class="fas fa-phone"></i></h3>
-                        <a href="tel:360 882 8887">360 882 8887</a>
-                        <h3><a href="https://www.facebook.com/Wild-Tiger-Thai-Restaurant-and-Bar-1725468634361251/"><i class="fab fa-facebook-f"></i></a></h3>
+                        <a href="tel:360 882 8887">+1 360 882 8887</a>
+                        <h3>
+                            <a href="https://www.facebook.com/Wild-Tiger-Thai-Restaurant-and-Bar-1725468634361251/"><i class="fab fa-facebook-f"></i></a>
+                             &nbsp;  &nbsp; <a href="https://www.yelp.com/biz/wild-tiger-vancouver"><i class="fab fa-yelp"></i></a>
+                        </h3>
                     </td>
                     <td style="width:70%;">
                         <iframe allowtransparency="true" frameborder="0" scrolling="no" style="width: 100%; height: 250px; margin-top: 10px; margin-bottom: 10px;" src="//www.weebly.com/weebly/apps/generateMap.php?map=google&amp;elementid=971374949284284131&amp;ineditor=0&amp;control=3&amp;width=auto&amp;height=250px&amp;overviewmap=0&amp;scalecontrol=0&amp;typecontrol=0&amp;zoom=15&amp;long=-122.50202780000001&amp;lat=45.6071294&amp;domain=www&amp;point=1&amp;align=1&amp;reseller=true"></iframe>
@@ -276,6 +278,9 @@
                 </tr>
             </table>
         </div>
+        <br>
+        <h3>made on earth by a human</h3>
+        <br>s
     </div>
     <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase-auth.js"></script>
