--- a/grip/home/index.html
+++ b/grip/home/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    <header>
+    <header style="position:absolute;">
         <table>
             <tr>
                 <td class="logo"><img src="../images/tiger_icon.png" style="width:60px;height:auto;"></td>
