--- a/index.html
+++ b/index.html
@@ -143,11 +143,6 @@
                  <h1><span id="web-btn" style="border-bottom:3px solid #000;" onclick="showweb()">web work.</span>
                     <span onclick="showdes()" id="des-btn">designs.</span></h1>
                  <div id="web">
-                  <div class="project">
-                          <h1>wybemf</h1>
-                          <h3>a social networking platform to connect dreamers and achievers</h3>
-                          <a href="https://wybemfapp.firebaseapp.com/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
-                  </div>
                  <div class="project">
                         <h1>senno</h1>
                         <h3>a movie rating website build using movie data i found on github</h3>
@@ -250,9 +245,9 @@
               <div id="contact">
                  <p>contact.</p> 
                  <div id="details">
-                       <a href="mailto:imfunny@getnada.com"><i class="far fa-envelope what-second-div"></i></a>
+                       <a href="mailto:imfunny@wybemf.com"><i class="far fa-envelope what-second-div"></i></a>
                        <a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github what-second-div"></i></a>
-                       <a href="https://dribbble.com/imfunny" target="_blank"><i class="fab fa-dribbble what-second-div"></i></a>
+                       <a href="https://dribbble.com/imfunniee" target="_blank"><i class="fab fa-dribbble what-second-div"></i></a>
                  </div>   
              </div>
              <center id="in_mobile"><b>made on earth by a human</b></center>
@@ -261,7 +256,7 @@
 <script src="index.js" type="text/JavaScript"></script>
 <script type="text/JavaScript">
     var typed = new Typed('#typehere', {
-    strings: ['<h1>hi imfunny,</h1> a frontend developer and ui/ux designer who’s comfortable with the server-side. <h3><div id="details"><a href="mailto:imfunny@getnada.com"><i class="far fa-envelope what-second-div"></i></a><a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github what-second-div"></i></a><a href="https://dribbble.com/imfunny" target="_blank"><i class="fab fa-dribbble what-second-div"></i></a></div></h3>'],
+    strings: ['<h1>hi imfunny,</h1> a frontend developer and ui/ux designer who’s comfortable with the server-side. <h3><div id="details"><a href="mailto:imfunny@wybemf.com"><i class="far fa-envelope what-second-div"></i></a><a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github what-second-div"></i></a><a href="https://dribbble.com/imfunniee" target="_blank"><i class="fab fa-dribbble what-second-div"></i></a></div></h3>'],
     typeSpeed: 35,
     smartBackspace: true,
     backSpeed: 28,
