--- a/index.html
+++ b/index.html
@@ -141,103 +141,63 @@
               <div id="work">
                  <p>works.</p>
                  <h1><span id="web-btn" style="border-bottom:3px solid #000;" onclick="showweb()">web work.</span>
-                    <span onclick="showdes()" id="des-btn">designs.</span></h1>
+                    <span onclick="showdes()" id="des-btn">ui/ux.</span></h1>
                  <div id="web">
+
+                 <div class="project">
+                        <h1>gitfolio</h1>
+                        <h3>personal website + blog for every github user</h3>
+                        <a href="https://imfunniee.github.io/gitfolio/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
+                        <a href="https://github.com/imfunniee/gitfolio" target="_blank"><button><i class="fas fa-code right-arrow"></i> code</button></a>
+                 </div>
+
+                 <div class="project">
+                        <h1>gitark</h1>
+                        <h3>dark theme for github</h3>
+                        <a href="https://chrome.google.com/webstore/detail/gitark/pajmlahbnmcmbfdmmcacaojpedjcdjgm" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
+                        <a href="https://github.com/imfunniee/gitark" target="_blank"><button><i class="fas fa-code right-arrow"></i> code</button></a>
+                 </div>
+
+                 <div class="project">
+                        <h1>zeva</h1>
+                        <h3>a modern and minimalist ui framework for building responsive and modern frontends</h3>
+                        <a href="https://zeva-ui.github.io" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
+                        <a href="https://github.com/zeva-ui/zeva" target="_blank"><button><i class="fas fa-code right-arrow"></i> code</button></a>
+                 </div>
+
                  <div class="project">
                         <h1>senno</h1>
-                        <h3>a movie rating website build using movie data i found on github</h3>
+                        <h3>a movie rating web app</h3>
                         <a href="https://imfunniee.github.io/senno/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
                         <a href="https://github.com/imfunniee/imfunniee.github.io/tree/master/senno" target="_blank"><button><i class="fas fa-code right-arrow"></i> code</button></a>
                  </div>
+
                  <div class="project">
-                        <h1>meteo</h1>
-                        <h3>a simple weather web-app, build using yahoo's weather api</h3>
-                        <a href="https://imfunniee.github.io/meteo/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
-                        <a href="https://github.com/imfunniee/meteo" target="_blank"><button><i class="fas fa-code right-arrow"></i> code</button></a>
-                 </div>
-                 <div class="project">
-                    <h1>pluto</h1>
-                    <h3>a peer to peer video and text chat web app</h3>
-                    <a href="https://imfunniee.github.io/pluto/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
-                    <a href="https://github.com/imfunniee/pluto" target="_blank"><button><i class="fas fa-code right-arrow"></i> code</button></a>
-                 </div>
-                 <div class="project">
-                        <h1>todo list</h1>
-                        <h3>a web-app to organize how to do the things you want to do</h3>
+                        <h1>todo</h1>
+                        <h3>a todo web app, everyone makes one right</h3>
                         <a href="https://imfunniee.github.io/todo/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
                         <a href="https://github.com/imfunniee/todo" target="_blank"><button><i class="fas fa-code right-arrow"></i> code</button></a>
-                 </div>
-
-                 <div class="project">
-                        <h1>ismydevicecharging</h1>
-                        <h3>idk why i even made this but ye it tells whether your device is charging or not</h3>
-                        <a href="https://imfunniee.github.io/ismydevicecharging/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
-                        <a href="https://github.com/imfunniee/imfunniee.github.io/tree/master/ismydevicecharging" target="_blank"><button><i class="fas fa-code right-arrow"></i> code</button></a>
-                 </div>
-
-                 <div class="project">
-                        <h1>zucc</h1>
-                        <h3>a desktop voice-controlled personal assistant (under construction...)</h3>
-                        <a href="https://imfunniee.github.io/social/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
-                        <a href="https://github.com/imfunniee/imfunniee.github.io/tree/master/social" target="_blank"><button><i class="fas fa-code right-arrow"></i> code</button></a>
-                 </div>
-
-                 <div class="project">
-                        <h1>travel</h1>
-                        <h3>a travel website layout/template/idea (under construction...)</h3>
-                        <a href="https://imfunniee.github.io/travel/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
-                        <a href="https://github.com/imfunniee/imfunniee.github.io/tree/master/travel" target="_blank"><button><i class="fas fa-code right-arrow"></i> code</button></a>
-                 </div>
-
-                 <div class="project">
-                        <h1>a portfolio website</h1>
-                        <h3>portfolio site for youtube channel galaxy and zeno (200k+ subscribers)</h3>
-                        <a href="https://melvin.fun/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
                  </div>
                 </div>
 
                 <div id="design" style="display:none;">
-                    <div class="project" onclick="inlarge('https://cdn.dribbble.com/users/2574485/screenshots/5866805/whatsapp_2x.png')">
-                        <img src="https://cdn.dribbble.com/users/2574485/screenshots/5866805/whatsapp_2x.png">
+                    <div class="project" onclick="inlarge('https://cdn.dribbble.com/users/2574485/screenshots/6191588/nike.png')">
+                        <img src="https://cdn.dribbble.com/users/2574485/screenshots/6191588/nike.png">
                     </div>
-                    <div class="project" onclick="inlarge('https://cdn.dribbble.com/users/2574485/screenshots/5855886/1_2x.png')">
-                        <img src="https://cdn.dribbble.com/users/2574485/screenshots/5855886/1_2x.png">
+                    <div class="project" onclick="inlarge('https://cdn.dribbble.com/users/2574485/screenshots/5424125/youtube_2x.png')">
+                        <img src="https://cdn.dribbble.com/users/2574485/screenshots/5424125/youtube_2x.png">
                     </div>
-                    <div class="project" onclick="inlarge('https://cdn.dribbble.com/users/2574485/screenshots/5804731/wybemf_2x.png')">
-                        <img src="https://cdn.dribbble.com/users/2574485/screenshots/5804731/wybemf_2x.png">
+                    <div class="project" onclick="inlarge('https://cdn.dribbble.com/users/2574485/screenshots/5389842/facebook1.png')">
+                        <img src="https://cdn.dribbble.com/users/2574485/screenshots/5389842/facebook1.png">
                     </div>
-                    <div class="project" onclick="inlarge('https://cdn.dribbble.com/users/2574485/screenshots/5424634/nav-micro.gif')">
-                        <img src="https://cdn.dribbble.com/users/2574485/screenshots/5424634/nav-micro.gif">
+                    <div class="project" onclick="inlarge('https://cdn.dribbble.com/users/2574485/screenshots/5337203/web_1920___1_2x.png')">
+                        <img src="https://cdn.dribbble.com/users/2574485/screenshots/5337203/web_1920___1_2x.png">
                     </div>
-                    <div class="project" onclick="inlarge('https://cdn.dribbble.com/users/2574485/screenshots/5424125/youtube_4x.png')">
-                        <img src="https://cdn.dribbble.com/users/2574485/screenshots/5424125/youtube_4x.png">
+                    <div class="project" onclick="inlarge('https://cdn.dribbble.com/users/2574485/screenshots/5334214/twitch_4x.png')">
+                        <img src="https://cdn.dribbble.com/users/2574485/screenshots/5334214/twitch_4x.png">
                     </div>
-                    <div class="project" onclick="inlarge('https://cdn.dribbble.com/users/2574485/screenshots/5389842/facebook1_4x.png')">
-                        <img src="https://cdn.dribbble.com/users/2574485/screenshots/5389842/facebook1_4x.png">
-                    </div>
-                     <div class="project" onclick="inlarge('https://cdn.dribbble.com/users/2574485/screenshots/5380746/srch.gif')">
-                         <img src="https://cdn.dribbble.com/users/2574485/screenshots/5380746/srch.gif">
-                     </div>
-                     <div class="project" onclick="inlarge('https://cdn.dribbble.com/users/2574485/screenshots/5377526/lol_4x.png')">
-                         <img src="https://cdn.dribbble.com/users/2574485/screenshots/5377526/lol_4x.png">
-                     </div>
-                     <div class="project" onclick="inlarge('https://cdn.dribbble.com/users/2574485/screenshots/5375361/custom_size___1_4x.png')">
-                         <img src="https://cdn.dribbble.com/users/2574485/screenshots/5375361/custom_size___1_4x.png">
-                     </div>
-                     <div class="project" onclick="inlarge('https://cdn.dribbble.com/users/2574485/screenshots/5357543/custom_size___1_4x.png')">
-                            <img src="https://cdn.dribbble.com/users/2574485/screenshots/5357543/custom_size___1_4x.png">
-                        </div>
-                        <div class="project" onclick="inlarge('https://cdn.dribbble.com/users/2574485/screenshots/5348291/web_1920___1_4x.png')">
-                         <img src="https://cdn.dribbble.com/users/2574485/screenshots/5348291/web_1920___1_4x.png">
-                     </div>
-                     <div class="project" onclick="inlarge('https://cdn.dribbble.com/users/2574485/screenshots/5337203/web_1920___1_4x.png')">
-                         <img src="https://cdn.dribbble.com/users/2574485/screenshots/5337203/web_1920___1_4x.png">
-                     </div>
-                     <div class="project" onclick="inlarge('https://cdn.dribbble.com/users/2574485/screenshots/5334214/twitch_4x.png')">
-                         <img src="https://cdn.dribbble.com/users/2574485/screenshots/5334214/twitch_4x.png">
-                     </div>
-                     <div class="project" onclick="inlarge('https://cdn.dribbble.com/users/2574485/screenshots/5318569/jk.gif')">
-                        <img src="https://cdn.dribbble.com/users/2574485/screenshots/5318569/jk.gif">
+                    <div class="project" onclick="inlarge('https://cdn.dribbble.com/users/2574485/screenshots/5380746/srch.gif')">
+                        <img src="https://cdn.dribbble.com/users/2574485/screenshots/5380746/srch.gif">
                     </div>
                 </div>
              </div>
@@ -248,6 +208,7 @@
                        <a href="mailto:imfunny@wybemf.com"><i class="far fa-envelope what-second-div"></i></a>
                        <a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github what-second-div"></i></a>
                        <a href="https://dribbble.com/imfunniee" target="_blank"><i class="fab fa-dribbble what-second-div"></i></a>
+                       <a href="https://linkedin.com/in/imfunniee" target="_blank"><i class="fab fa-linkedin what-second-div"></i></a>
                  </div>   
              </div>
              <center id="in_mobile"><b>made on earth by a human</b></center>
@@ -256,7 +217,7 @@
 <script src="index.js" type="text/JavaScript"></script>
 <script type="text/JavaScript">
     var typed = new Typed('#typehere', {
-    strings: ['<h1>hi imfunny,</h1> a frontend developer and ui/ux designer who’s comfortable with the server-side. <h3><div id="details"><a href="mailto:imfunny@wybemf.com"><i class="far fa-envelope what-second-div"></i></a><a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github what-second-div"></i></a><a href="https://dribbble.com/imfunniee" target="_blank"><i class="fab fa-dribbble what-second-div"></i></a></div></h3>'],
+    strings: ['<h1>hi imfunny,</h1> a frontend developer and ui/ux designer who’s comfortable with the server-side. <h3><div id="details"><a href="mailto:imfunny@wybemf.com"><i class="far fa-envelope what-second-div"></i></a><a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github what-second-div"></i></a><a href="https://dribbble.com/imfunniee" target="_blank"><i class="fab fa-dribbble what-second-div"></i></a><a href="https://www.linkedin.com/in/imfunniee" target="_blank"><i class="fab fa-linkedin what-second-div"></i></a></div></h3>'],
     typeSpeed: 35,
     smartBackspace: true,
     backSpeed: 28,
