--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <img src="" id="thischangesxD">
     </div>
 </div>
-    <div id="header" class="animated bounceInDown" style="animation-delay:4s;">
-    <div id="links">
+    <div id="header">
+    <div id="links" class="animated bounceInDown" style="animation-delay:4s;">
         <a href="#about">skills</a>
         <a href="#work" id="wtf">works</a>
         <a href="#contact">contact</a>
