--- a/fimbo/index.html
+++ b/fimbo/index.html
@@ -13,9 +13,6 @@
         <link rel="stylesheet" href="index.css">
         </head>
 <body>
-    <div id="loading">
-    <div id="spinner"></div>
-    </div>
     <div id="header">
         <div id="logo">fimbo.</div>
     </div>
@@ -27,28 +24,32 @@
       <div class="template">
           <div class="temp_image" style="background:url('img/1.png') center center;"></div>
             <div id="title">Tatum</div>
-            <div id="downloads">6 downloads</div>
             <a href="https://imfunniee.github.io/template/1/" target="_blank"><button class="btn_one">live.</button></a>
             <a href="https://github.com/imfunniee/Tatum/archive/master.zip" target="_blank"><button class="btn_two">download.</button></a>
         </div>
         <div class="template">
             <div class="temp_image" style="background:url('img/2.png') center center;"></div>
               <div id="title">Flynn</div>
-              <div id="downloads">8 downloads</div>
               <a href="https://imfunniee.github.io/template/2/" target="_blank"><button class="btn_one">live.</button></a>
               <a href="https://github.com/imfunniee/Flynn/archive/master.zip" target="_blank"><button class="btn_two">download.</button></a>
         </div>
         <div class="template">
             <div class="temp_image" style="background:url('img/3.png') center center;"></div>
               <div id="title">Foster</div>
-              <div id="downloads">12 downloads</div>
               <a href="https://imfunniee.github.io/template/3/" target="_blank"><button class="btn_one">live.</button></a>
               <a href="https://github.com/imfunniee/Foster/archive/master.zip" target="_blank"><button class="btn_two">download.</button></a>
           </div>
     </div>
+    <center style="margin:10vh 0px;">
+        <b>Loved My Work? Support me by buying me a Coffee ☕</b>
+        <p>
+            <a href="https://www.buymeacoffee.com/imfunniee" target="_blank"><img src="https://www.buymeacoffee.com/assets/img/custom_images/orange_img.png" alt="Buy Me A Coffee" style="height: auto !important;width: auto !important;"></a>
+        </p>
+    </center>
     <div id="footer">
         <h3>more templates yet to come... 👀⏰</h3>
         <h3>made on earth by a human</h3>
     </div>
         <script src="index.js" type="text/javascript"></script>
 </body>
+</html>
