--- a/fimbo/index.html
+++ b/fimbo/index.html
@@ -17,7 +17,7 @@
         <div id="logo">fimbo.</div>
     </div>
     <div id="middle">
-        <h1>Customizable, Free to use, Mobile Responsive Templates</h1>
+        <h1 style="margin:0px 2vw;">Free to use portfolio templates</h1>
         <h2>a template for everyone</h2>
     </div>
     <div id="container">
