--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
                        <a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github what-second-div"></i></a>
                        <a href="https://dribbble.com/imfunniee" target="_blank"><i class="fab fa-dribbble what-second-div"></i></a>
                        <a href="https://linkedin.com/in/imfunniee" target="_blank"><i class="fab fa-linkedin what-second-div"></i></a>
+                       <a href="https://twitter.com/imfunnieee" target="_blank"><i class="fab fa-twitter what-second-div"></i></a>
                  </div>   
              </div>
              <center id="in_mobile"><b>made on earth by a human</b></center>
@@ -217,7 +218,7 @@
 <script src="index.js" type="text/JavaScript"></script>
 <script type="text/JavaScript">
     var typed = new Typed('#typehere', {
-    strings: ['<h1>hi imfunny,</h1> a frontend developer and ui/ux designer who’s comfortable with the server-side. <h3><div id="details"><a href="mailto:imfunny@wybemf.com"><i class="far fa-envelope what-second-div"></i></a><a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github what-second-div"></i></a><a href="https://dribbble.com/imfunniee" target="_blank"><i class="fab fa-dribbble what-second-div"></i></a><a href="https://www.linkedin.com/in/imfunniee" target="_blank"><i class="fab fa-linkedin what-second-div"></i></a></div></h3>'],
+    strings: ['<h1>hi imfunny,</h1> a frontend developer and ui/ux designer who’s comfortable with the server-side. <h3><div id="details"><a href="mailto:imfunny@wybemf.com"><i class="far fa-envelope what-second-div"></i></a><a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github what-second-div"></i></a><a href="https://dribbble.com/imfunniee" target="_blank"><i class="fab fa-dribbble what-second-div"></i></a><a href="https://www.linkedin.com/in/imfunniee" target="_blank"><i class="fab fa-linkedin what-second-div"></i></a><a href="https://twitter.com/imfunnieee" target="_blank"><i class="fab fa-twitter what-second-div"></i></a></div></h3>'],
     typeSpeed: 35,
     smartBackspace: true,
     backSpeed: 28,
