--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                        <a href="https://twitter.com/imfunnieee" target="_blank"><i class="fab fa-twitter what-second-div"></i></a>
                  </div>   
              </div>
-             <center id="in_mobile"><b>made on earth by a human</b></center>
+             <center id="in_mobile" style="margin:5vh 0px"><b>made on earth by a human</b></center>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
 <script src="index.js" type="text/JavaScript"></script>
