--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
          
               <div id="contact">
                  <p>contact.</p> 
-                 <div id="details">
+                 <div class="details">
                        <a href="mailto:imfunny@wybemf.com"><i class="far fa-envelope what-second-div"></i></a>
                        <a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github what-second-div"></i></a>
                        <a href="https://dribbble.com/imfunniee" target="_blank"><i class="fab fa-dribbble what-second-div"></i></a>
@@ -212,13 +212,13 @@
                        <a href="https://twitter.com/imfunnieee" target="_blank"><i class="fab fa-twitter what-second-div"></i></a>
                  </div>   
              </div>
-             <p id="in_mobile" style="margin:5vh 0px;text-align:center;"><b>made on earth by a human</b></p>
+             <p id="in_mobile" style="padding:5vh 0px;text-align:center;"><b>made on earth by a human</b></p>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
 <script src="index.js" type="text/JavaScript"></script>
 <script type="text/JavaScript">
     var typed = new Typed('#typehere', {
-    strings: ['<h1>hi imfunny,</h1> a frontend developer and ui/ux designer who’s comfortable with the server-side. <h3><div id="details"><a href="mailto:imfunny@wybemf.com"><i class="far fa-envelope what-second-div"></i></a><a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github what-second-div"></i></a><a href="https://dribbble.com/imfunniee" target="_blank"><i class="fab fa-dribbble what-second-div"></i></a><a href="https://www.linkedin.com/in/imfunniee" target="_blank"><i class="fab fa-linkedin what-second-div"></i></a><a href="https://twitter.com/imfunnieee" target="_blank"><i class="fab fa-twitter what-second-div"></i></a></div></h3>'],
+    strings: ['<h1>hi imfunny,</h1> a frontend developer and ui/ux designer who’s comfortable with the server-side. <h3><div class="details"><a href="mailto:imfunny@wybemf.com"><i class="far fa-envelope what-second-div"></i></a><a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github what-second-div"></i></a><a href="https://dribbble.com/imfunniee" target="_blank"><i class="fab fa-dribbble what-second-div"></i></a><a href="https://www.linkedin.com/in/imfunniee" target="_blank"><i class="fab fa-linkedin what-second-div"></i></a><a href="https://twitter.com/imfunnieee" target="_blank"><i class="fab fa-twitter what-second-div"></i></a></div></h3>'],
     typeSpeed: 35,
     smartBackspace: true,
     backSpeed: 28,
