--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
          
               <div id="contact">
                  <p>contact.</p> 
-                 <div class="details">
+                 <div class="details" style="text-align:left;">
                        <a href="mailto:imfunny@wybemf.com"><i class="far fa-envelope what-second-div"></i></a>
                        <a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github what-second-div"></i></a>
                        <a href="https://dribbble.com/imfunniee" target="_blank"><i class="fab fa-dribbble what-second-div"></i></a>
