--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <meta property="og:title" content="imfunny.">
     <meta property="og:type" content="website">
     <meta property="og:description" content="hi imfunny, a Front-end developer and UI/UX Designer who’s comfortable with the server-side." />
-    <meta property="og:image" content="https://imfunniee.github.io/og.png">
+    <meta property="og:image" content="https://imfunniee.github.io/img/logo.png">
     <meta property="og:url" content="https://imfunniee.github.io/">
     <meta property="twitter:card" content="summary">
     <meta property="twitter:title" content="imfunny.">
     <meta property="twitter:description" content="hi imfunny, a Front-end developer and UI/UX Designer who’s comfortable with the server-side." />
-    <meta property="twitter:image" content="https://imfunniee.github.io/og.png">
+    <meta property="twitter:image" content="https://imfunniee.github.io/img/logo.png">
     <meta property="twitter:url" content="https://imfunniee.github.io/">
-    <link rel="icon" href="https://imfunniee.github.io/icon.png" type="image/png" />
+    <link rel="icon" href="https://imfunniee.github.io/img/logo.png" type="image/png" />
     <meta name="google-site-verification" content="mjFIZTxE_IKhH-lBgPwblCJ1xPugeI5RRe0qnXF10M8" />
     <title>imfunny.</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -27,7 +27,13 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
 </head>
-<body id="body">
+<body>
+<div id="mailing">
+    <h3>Make your inbox happy by joining my exclusive newsletter!</h3>
+    <input type="email" placeholder="Your email" id="email"><br>
+    <button id="btn1">Join</button>&nbsp;&nbsp;
+    <button id="btn2">Go away</button>
+</div>
 <div id="loading">
     <div id="leftThingy"></div>
     <div id="RightThingy"></div>
@@ -214,9 +220,8 @@
              </div>
              <p id="in_mobile" style="padding:5vh 0px;text-align:center;"><b>made on earth by a human</b></p>
     </div>
-<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
-<script src="index.js" type="text/JavaScript"></script>
-<script type="text/JavaScript">
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
+<script type="text/javaScript">
     var typed = new Typed('#typehere', {
     strings: ['<h1>hi imfunny,</h1> a frontend developer and ui/ux designer who’s comfortable with the server-side. <h3><div class="details"><a href="mailto:imfunny@wybemf.com"><i class="far fa-envelope what-second-div"></i></a><a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github what-second-div"></i></a><a href="https://dribbble.com/imfunniee" target="_blank"><i class="fab fa-dribbble what-second-div"></i></a><a href="https://www.linkedin.com/in/imfunniee" target="_blank"><i class="fab fa-linkedin what-second-div"></i></a><a href="https://twitter.com/imfunnieee" target="_blank"><i class="fab fa-twitter what-second-div"></i></a></div></h3>'],
     typeSpeed: 35,
@@ -239,5 +244,20 @@
     });
    });
 </script>
+<script type="text/javascript" src="https://www.gstatic.com/firebasejs/6.1.0/firebase-app.js"></script>
+<script type="text/javascript" src="https://www.gstatic.com/firebasejs/6.1.0/firebase-firestore.js"></script>
+<script  type="text/javaScript">
+  var firebaseConfig = {
+    apiKey: "AIzaSyAWHY1B4d8g80teaZ3Ezys7bh9k_CpCYZs",
+    authDomain: "imfunniee.firebaseapp.com",
+    databaseURL: "https://imfunniee.firebaseio.com",
+    projectId: "imfunniee",
+    storageBucket: "imfunniee.appspot.com",
+    messagingSenderId: "861945231756",
+    appId: "1:861945231756:web:c7e14abdf6f398a8"
+  };
+  firebase.initializeApp(firebaseConfig);
+</script>
+<script src="index.js" type="text/javaScript"></script>
 </body>
 </html>
