--- a/countdown/index.html
+++ b/countdown/index.html
@@ -4,27 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Christmas 2019 Countdown</title>
+    <title>New Year 2020 Countdown</title>
     <link rel="stylesheet" href="index.css">
     <script src="https://rawgit.com/kimmobrunfeldt/progressbar.js/master/dist/progressbar.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/nprogress@0.2.0/nprogress.js"></script>
+    <link rel="stylesheet" href="Nprogress.css">
 </head>
 <body>
-     <div id="loading">
-        <div id="spinner"></div>
+    <div id="mailing">
+        <h3>Make your inbox happy by joining my exclusive newsletter!</h3>
+        <input type="email" placeholder="Your email" id="email"><br>
+        <button id="btn1">Join</button>&nbsp;&nbsp;
+        <button id="btn2">Go away</button>
     </div>
+    <div id="loading"></div>
     <div id="background"></div>
     <center>
         <div id="days"></div>
         <div id="hours"></div>
         <div id="minutes"></div>
         <div id="seconds"></div>
-        <h2>Christmas 2019 Countdown</h2>
+        <h2>New Year 2020 Countdown</h2>
         <div id="time-container">
         </div>
         <p>made on earth by a human</p>
         </center>
-    <script src="index.js" type="text/javascript"></script>
+<script type="text/javascript">
+  NProgress.configure({easing: 'ease', speed: 500, showSpinner: false});
+  NProgress.start();
+</script>
+<script type="text/javascript" src="https://www.gstatic.com/firebasejs/6.1.0/firebase-app.js"></script>
+<script type="text/javascript" src="https://www.gstatic.com/firebasejs/6.1.0/firebase-firestore.js"></script>
+<script  type="text/javaScript">
+  var firebaseConfig = {
+    apiKey: "AIzaSyAWHY1B4d8g80teaZ3Ezys7bh9k_CpCYZs",
+    authDomain: "imfunniee.firebaseapp.com",
+    databaseURL: "https://imfunniee.firebaseio.com",
+    projectId: "imfunniee",
+    storageBucket: "imfunniee.appspot.com",
+    messagingSenderId: "861945231756",
+    appId: "1:861945231756:web:c7e14abdf6f398a8"
+  };
+  firebase.initializeApp(firebaseConfig);
+</script>
+<script src="index.js" type="text/javaScript"></script>
 </body>
 </html>
