--- a/pluto/how.html
+++ b/pluto/how.html
@@ -12,18 +12,22 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
 <body>
-    <div id="main" class="animated fadeIn">
-        <h1>Pluto</h1>
+    <div id="main">
+       <h1>Pluto</h1>
        <ul>
-       <li>Allow camera</li>
-       <li>copy your id and send it to peer2/your friend</li>
-       <li>paste your friend's id in "other id" textarea</li>
-       <li>you should see your friend on the right hand side</li>
+           <li>Allow camera</li>
+           <li>Copy your id and send it to peer 2 or your friend (idk how) and tell your friend to paste it in "other id" textarea</li>
+           <li>Tell your friend to give you their id, once you got your firends id paste it in "other id" textarea</li>
+           <li>Hit Connect</li>
+           <br>
+           🎉 You should see your friend on the right hand side
+           <br><br>
+           Warning : The unique ids have your ip in them, so ye don't go around on internet sharing the ids (trust your firends and family only)
        </ul>
 <h4>#1 in the url makes you peer1/person 1 and the other person/your firend peer2 so ye tell your firend to open up the site without "#1" in url</h4>
 <h4>if it doesn't work create an issue on github (https://github.com/imfunniee/Pluto) </h4>
 <p id="idkifthisthingisrequiredbutitisiguess">
-        made on earth by a human <a href="index.html">home</a>
+        made on earth by a human <a href="/">home</a>
      </p>
     </div>
 </body>
