--- a/pluto/how.html
+++ b/pluto/how.html
@@ -24,10 +24,10 @@
            <br><br>
            Warning : The unique ids have your ip in them, so ye don't go around on internet sharing the ids (trust your firends and family only)
        </ul>
-<h4>#1 in the url makes you peer1/person 1 and the other person/your firend peer2 so ye tell your firend to open up the site without "#1" in url</h4>
+<h4>#1 in the url makes you peer1/person 1 and the other person/your firend peer2 so ye tell your friend to open up the site without "#1" in url</h4>
 <h4>if it doesn't work create an issue on github (https://github.com/imfunniee/Pluto) </h4>
 <p id="idkifthisthingisrequiredbutitisiguess">
-        made on earth by a human <a href="/">home</a>
+        made on earth by a human <a href="/pluto">home</a>
      </p>
     </div>
 </body>
