--- a/index.html
+++ b/index.html
@@ -159,6 +159,12 @@
                  </div>
 
                  <div class="project">
+                    <h1>wybemf</h1>
+                    <h3>curate all your social media links at one place so you don't have to list them all.</h3>
+                    <a href="https://wybemf.com" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
+                </div>
+
+                 <div class="project">
                         <h1>zeva</h1>
                         <h3>a modern and minimalist ui framework for building responsive and modern frontends</h3>
                         <a href="https://zeva-ui.github.io" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
@@ -173,10 +179,10 @@
                  </div>
 
                  <div class="project">
-                        <h1>todo</h1>
-                        <h3>a todo web app, everyone makes one right</h3>
-                        <a href="https://imfunniee.github.io/todo/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
-                        <a href="https://github.com/imfunniee/todo" target="_blank"><button><i class="fas fa-code right-arrow"></i> code</button></a>
+                        <h1>fimbo</h1>
+                        <h3>free to use portfolio templates</h3>
+                        <a href="https://imfunniee.github.io/fimbo/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
+                        <a href="https://github.com/imfunniee/fimbo" target="_blank"><button><i class="fas fa-code right-arrow"></i> code</button></a>
                  </div>
                 </div>
 
