--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="hi imfunny, a Front-end developer and UI/UX Designer who’s comfortable with the server-side.">
+    <meta name="description" content="hi im funny, a Front-end developer and UI/UX Designer who’s comfortable with the server-side.">
     <meta name="keywords" content="FrontEnd Developer,UI/UX Designer,Backend,Designer,HTML5,CSS3,JavaScript,website, Web Dev">
-    <meta name="author" content="imfunny">
-    <meta property="og:title" content="imfunny.">
+    <meta name="author" content="funny">
+    <meta property="og:title" content="funny.">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="hi imfunny, a Front-end developer and UI/UX Designer who’s comfortable with the server-side." />
+    <meta property="og:description" content="hi im funny, a Front-end developer and UI/UX Designer who’s comfortable with the server-side." />
     <meta property="og:image" content="https://imfunniee.github.io/img/logo.png">
     <meta property="og:url" content="https://imfunniee.github.io/">
     <meta property="twitter:card" content="summary">
-    <meta property="twitter:title" content="imfunny.">
-    <meta property="twitter:description" content="hi imfunny, a Front-end developer and UI/UX Designer who’s comfortable with the server-side." />
+    <meta property="twitter:title" content="funny.">
+    <meta property="twitter:description" content="hi im funny, a Front-end developer and UI/UX Designer who’s comfortable with the server-side." />
     <meta property="twitter:image" content="https://imfunniee.github.io/img/logo.png">
     <meta property="twitter:url" content="https://imfunniee.github.io/">
     <link rel="icon" href="https://imfunniee.github.io/img/logo.png" type="image/png" />
     <meta name="google-site-verification" content="mjFIZTxE_IKhH-lBgPwblCJ1xPugeI5RRe0qnXF10M8" />
-    <title>imfunny.</title>
+    <title>funny.</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
@@ -223,7 +223,7 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
 <script type="text/javaScript">
     var typed = new Typed('#typehere', {
-    strings: ['<h1>hi imfunny,</h1> a frontend developer and ui/ux designer who’s comfortable with the server-side. <h3><div class="details"><a href="mailto:imfunny@wybemf.com"><i class="far fa-envelope what-second-div"></i></a><a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github what-second-div"></i></a><a href="https://dribbble.com/imfunniee" target="_blank"><i class="fab fa-dribbble what-second-div"></i></a><a href="https://www.linkedin.com/in/imfunniee" target="_blank"><i class="fab fa-linkedin what-second-div"></i></a><a href="https://twitter.com/imfunnieee" target="_blank"><i class="fab fa-twitter what-second-div"></i></a></div></h3>'],
+    strings: ['<h1>funny</h1> frontend developer and ui/ux designer who’s comfortable with the server-side. <h3><div class="details"><a href="mailto:imfunny@wybemf.com"><i class="far fa-envelope what-second-div"></i></a><a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github what-second-div"></i></a><a href="https://dribbble.com/imfunniee" target="_blank"><i class="fab fa-dribbble what-second-div"></i></a><a href="https://www.linkedin.com/in/imfunniee" target="_blank"><i class="fab fa-linkedin what-second-div"></i></a><a href="https://twitter.com/imfunnieee" target="_blank"><i class="fab fa-twitter what-second-div"></i></a></div></h3>'],
     typeSpeed: 35,
     smartBackspace: true,
     backSpeed: 28,
