--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
 <script type="text/javaScript">
     var typed = new Typed('#typehere', {
-    strings: ['<h1>Hey there,</h1>im funny, a frontend developer and ui/ux designer who’s comfortable with the server-side. <h3><div class="details"><a href="mailto:imfunny@wybemf.com"><i class="far fa-envelope what-second-div"></i></a><a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github what-second-div"></i></a><a href="https://dribbble.com/imfunniee" target="_blank"><i class="fab fa-dribbble what-second-div"></i></a><a href="https://www.linkedin.com/in/imfunniee" target="_blank"><i class="fab fa-linkedin what-second-div"></i></a><a href="https://twitter.com/imfunnieee" target="_blank"><i class="fab fa-twitter what-second-div"></i></a></div></h3>'],
+    strings: ['<h1>hey there,</h1>im funny, a frontend developer and ui/ux designer who’s comfortable with the server-side. <h3><div class="details"><a href="mailto:imfunny@wybemf.com"><i class="far fa-envelope what-second-div"></i></a><a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github what-second-div"></i></a><a href="https://dribbble.com/imfunniee" target="_blank"><i class="fab fa-dribbble what-second-div"></i></a><a href="https://www.linkedin.com/in/imfunniee" target="_blank"><i class="fab fa-linkedin what-second-div"></i></a><a href="https://twitter.com/imfunnieee" target="_blank"><i class="fab fa-twitter what-second-div"></i></a></div></h3>'],
     typeSpeed: 35,
     smartBackspace: true,
     backSpeed: 28,
