--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
   <meta name="google-site-verification" content="mjFIZTxE_IKhH-lBgPwblCJ1xPugeI5RRe0qnXF10M8" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
+  <meta name="theme-color" content="#000">
+  <meta name="msapplication-navbutton-color" content="#000">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#000">
   <title>funny - frontend developer & UI designer</title>
   <meta name="title" content="funny - frontend developer & UI designer">
-  <meta name="description" content="Hey Stranger!! Looking for a frontend developer or UI designer? Hire Me">
+  <meta name="description" content="Hey Stranger, Looking for a frontend developer or UI designer? Hire Me">
   <meta name="keywords"
     content="web developer, front end engineer, front end, ui, front end developer, ui deisgner, frontend designer, hire front end developer, hire front end freelancers, hire ui deisgner freelancers">
   <meta name="robots" content="index, follow">
