--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <li style="float:left;">
           <img src="./assets/images/logo.png" alt="funny's logo" />
         </li>
-        <li><a class="swipe" href="mailto:imfunny@wybemf.com" tabindex="4">contact</a></li>
+        <li><a class="swipe" href="mailto:imfunniee@gmail.com" tabindex="4">contact</a></li>
         <li><a class="swipe" href="https://dribbble.com/imfunniee" tabindex="3">ui</a></li>
         <li><a class="swipe" href="https://github.com/imfunniee" tabindex="2">web</a></li>
         <li><a class="swipe" tabindex="1" onclick="alert('working on it :)')">showreel</a></li>
@@ -52,7 +52,7 @@
       hey stranger, <br />
       let's not be strangers <br />anymore
     </div>
-    <button onclick="window.location = 'mailto:imfunny@wybemf.com'">hire me</button>
+    <button onclick="window.location = 'mailto:imfunniee@gmail.com'">hire me</button>
     <footer>
       <ul>
         <li style="float:left"><b id="distance">0.00</b> m</li>
