--- a/countdown/index.html
+++ b/countdown/index.html
@@ -19,7 +19,7 @@
         <div id="hours"></div>
         <div id="minutes"></div>
         <div id="seconds"></div>
-        <h2>New Year 2021 Countdown</h2>
+        <h2>Christmas 2021 Countdown</h2>
         <div id="time-container">
         </div>
         <p>made on earth by a human</p>
